# RAGLab

./: .dockerignore  .gitignore  README.md  docker-compose.yaml
RAGLab_BE/: pyproject.toml
RAGLab_BE/app/: main.py
RAGLab_BE/app/core/: config.py  logging.py
RAGLab_BE/app/models/: documents.py
RAGLab_BE/app/routers/: files.py
RAGLab_BE/app/services/: embedding.py
RAGLab_BE/app/services/doc_processing/: chunkers.py  interfaces.py  pipeline.py  processors.py
RAGLab_FE/: .env  Dockerfile  README.md  app.py  config.py  pyproject.toml
