[project]
name = "raglab-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "langchain>=0.3.13",
    "markdown>=3.7",
    "pydantic-settings>=2.7.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "sentence-transformers>=3.3.1",
]
